v0.5.9 FIX errors not showing and more new settings!

--- a/public/chatify/all.css
+++ b/public/chatify/all.css
@@ -6,8 +6,8 @@ body {
   padding: 0;
   background-color: var(--background-default);
   color: var(--text-color);
-  font-family: "Segoe UI", system-ui, -apple-system, BlinkMacSystemFont, Inter, Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Segoe UI", system-ui, -apple-system, BlinkMacSystemFont, Inter,
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100%;
   width: 100%;
 }
@@ -470,7 +470,11 @@ body > .messages-wrapper > :nth-child(2) {
   width: 100%;
   resize: vertical;
   padding: 8px;
-  background: linear-gradient(180deg, transparent 0%, var(--background-default) 100%);
+  background: linear-gradient(
+    180deg,
+    transparent 0%,
+    var(--background-default) 100%
+  );
 }
 
 body > .messages-wrapper > .messages > .message > .wrapper > .icon {
@@ -830,12 +834,12 @@ code:not(pre code) {
 }
 
 .error {
-  background-color: rgba(255, 0, 0, 0.308);
-  border: 1px solid rgba(255, 96, 96, 0.308);
-  padding: 16px;
+  background-color: var(--button-danger-color);
+  border: 1px solid var(--transparent-border);
   border-radius: 8px;
-  max-width: 300px;
   overflow: auto;
+  display: inline-block;
+  padding: 12px 16px;
 }
 
 @keyframes cursor {
